After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752957 - Keystrokes go to first opened tab, not current
Keystrokes go to first opened tab, not current
Status: RESOLVED FIXED
Product: vinagre
Classification: Applications
Component: general
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: vinagre-maint
vinagre-maint
Depends on:
Blocks:
 
 
Reported: 2015-07-28 10:25 UTC by Iain
Modified: 2016-07-05 16:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't capture key events of other tabs (2.24 KB, patch)
2016-02-22 10:56 UTC, Marek Kašík
committed Details | Review
Give focus to new RDP tab (1.44 KB, patch)
2016-02-23 11:05 UTC, Marek Kašík
committed Details | Review

Description Iain 2015-07-28 10:25:30 UTC
I generally open RDP connections to one of two Windows servers, and the both work fine, but if I open both in the same Vinagre window, only the tab that was first to open gets key presses.

I had an active directory window open in the first tab, then tried to do something on the second tab that required the delete key. When I went back to the first tab it was asking me if I wanted to delete a key group!

Software: Vinagre 3.14.3, as installed by Fedora 21 Workstation system packages
Comment 1 Damien Gombault 2016-01-04 13:17:39 UTC
Hi.

I confirm this problem.

How to reproduce :
1. open 2 RDP connections in the same Vinagre window (2 tabs)
2. open a notepad on the 2 remote desktops
3. active the second tab
4. type text with keyboard
5. the text is written in the notepad on first tab

I use vinagre-3.18.2-1.fc23.x86_64 on Fedora 23.
Comment 2 Marek Kašík 2016-02-22 10:56:43 UTC
Created attachment 321819 [details] [review]
Don't capture key events of other tabs

Hi, this patch fixes the problem for me. I've tested it with one RDP tab and one VNC tab but I think that the it fixes the problem with 2 RDP tabs too.
Comment 3 David King 2016-02-22 11:06:41 UTC
Review of attachment 321819 [details] [review]:

Looks fine to me. Please push to the relevant branches.
Comment 4 Marek Kašík 2016-02-22 17:58:09 UTC
Thank you for the review. Unfortunately, this revealed another problem. The RDP tab doesn't have focus so it doesn't get key events initially (the "Connect" button has the focus). It works when you open another tab so I didn't see it. I'll try to fix this tomorrow.
Comment 5 Marek Kašík 2016-02-23 11:05:38 UTC
Created attachment 321939 [details] [review]
Give focus to new RDP tab

This patch makes the RDP tab focusable and makes it to grab the focus once it is realized.
Comment 6 David King 2016-02-23 11:08:34 UTC
Review of attachment 321939 [details] [review]:

Sure, looks fine.
Comment 7 Marek Kašík 2016-02-23 11:50:43 UTC
Thank you for the reviews. I've pushed the patches to master and 3.18 branches.
Comment 8 Iain 2016-07-05 16:19:30 UTC
Thanks for fixing. Do you happen to know if this will be backported into Red Hat 7 or will I have to wait for a Red Hat that includes Vinagre 3.18?