Don't capture key events of other tabs

Once an RDP tab is opened it captures all key events
on the Vinagre's window.
This commit fixes this so the RDP tab captures the events
just from its own tab.

https://bugzilla.gnome.org/show_bug.cgi?id=752957